[project]
name = "project1-repko-andrei-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=2.7"
dependencies = [
]
[tool.poetry]
packages = [
     { include = "labyrinth_game" },
]
[tool.poetry.scripts]
project = "labyrinth_game.main:main"
 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
